--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "test": "vitest --environment jsdom"
+    "test": "vitest --environment jsdom",
+    "deploy": "npm run build && npx firebase deploy --only hosting"
   },
   "dependencies": {
     "embla-carousel": "^7.0.0",
